--- a/app/src/main/res/layout/explain2_card.xml
+++ b/app/src/main/res/layout/explain2_card.xml
@@ -4,9 +4,9 @@
     android:id="@+id/explain2_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
+    android:layout_marginBottom="16dp"
     android:clickable="true"
     android:foreground="?android:selectableItemBackground"
     app:cardCornerRadius="12dp">
