--- a/app/src/main/res/layout/explain_card.xml
+++ b/app/src/main/res/layout/explain_card.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
+    android:layout_marginBottom="16dp"
     android:clickable="true"
     android:foreground="?android:selectableItemBackground"
     app:cardCornerRadius="12dp">
